add Song model, service, and controller; implement endpoints for retrieving song summaries and details